# ros-repo-1

./: .gitignore  README.md  This_is_DEV2.txt  This_is_Dev1.txt  receiving.ui  runfile.md  runfile.txt  task_request_client_class.puml  task_request_client_flow.puml  task_request_client_state.puml
data/: riboya_ko_linux_v3_0_0.ppn
depth_ws/: AngstrongsdkLog.txt
depth_ws/ascamera/: CMakeLists.txt  package.xml
depth_ws/ascamera/include/: CameraPublisher.h
depth_ws/ascamera/src/: CameraPublisher copy 2.cpp  CameraPublisher copy 3.cpp  CameraPublisher copy 4.cpp  CameraPublisher copy 5.cpp  CameraPublisher copy 6.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/admin/share/admin/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/kiosk/share/kiosk/: package.sh  package.xml
install/libo_interfaces/share/libo_interfaces/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/main_server/share/main_server/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
ros_ws/: frames_2025-08-02_15.48.41.gv  naigator_ver.txt  setup_env.sh
ros_ws/src/: code_assistance_prompt.md  gemini_prompt.md
ros_ws/src/admin/: package.xml  setup.py
ros_ws/src/admin/admin/: debug_tool.py  debug_tool_qt.py  main_app.py  test_cam_sender.py  test_cam_sender_front.py
ros_ws/src/admin/admin/tabs/: __init__.py  ai_server_control_tab.py  heartbeat_monitor_tab.py  main_control_tab.py  main_view_tab.py  navigator_tab.py  system_logs_tab.py  task_request_tab.py
ros_ws/src/admin/test/: test_cam_sender.py  test_cam_sender_front.py
ros_ws/src/admin/ui/: admin_main_tab.ui  ai_server_control_tab.ui  debug_tool.ui  main_control_tab.ui  main_view_tab.ui  main_window.ui  robot_monitor.ui
ros_ws/src/ai_service/: package.xml  setup.cfg  setup.py
ros_ws/src/ai_service/launch/: ai_service.launch.py
ros_ws/src/file_documents/: DB Tables.md  Interface Specification.md  aladin_api.md  assist_sequence.md  delivery_sequence.md  escoting_sequence.md  kiosk_corner_escoting.md  kiosk_escoting.md  libo_gui.md
ros_ws/src/hardware_handler/: package.xml  setup.cfg  setup.py
ros_ws/src/hardware_handler/launch/: hardware_handler.launch.py
ros_ws/src/hardware_handler/nodes/: depth_cam_sender.py  mic_streamer.py  rgb_led_controller.py  speaker_node.py
ros_ws/src/kiosk/: main_window.py  package.xml  setup.py  test_book_detail_popup.py
ros_ws/src/libo_esp32/: WEIGHT_SENSOR_MICROROS_README.md  calibration_esp32.ino  measure_things.ino  menual_neopixel.md  micro_ros_test.ino  reset_eeprom.ino
ros_ws/src/libo_esp32/combined_sensor_led_microros_wifi/: combined_sensor_led_microros_wifi.ino
ros_ws/src/libo_esp32/combined_sensor_microros/: combined_sensor_microros.ino
ros_ws/src/libo_esp32/neopixel/: neopixel.ino
ros_ws/src/libo_esp32/neopixel_microros/: neopixel_microros.ino
ros_ws/src/libo_esp32/neopixel_microros_wifi/: neopixel_microros_wifi.ino
ros_ws/src/libo_esp32/neopixel_microros_wifi_improved/: neopixel_microros_wifi_improved.ino
ros_ws/src/libo_esp32/payment/: payment.ino
ros_ws/src/libo_esp32/payment_wifi/: payment_wifi.ino
ros_ws/src/libo_esp32/weight_sensor_microros/: weight_sensor_microros.ino
ros_ws/src/libo_esp32/weight_sensor_microros_wifi/: weight_sensor_microros_wifi.ino
ros_ws/src/libo_gui/: package.xml  setup.cfg  setup.py
ros_ws/src/libo_gui/libo_gui/: __init__.py  robot_face_gui.py  robot_face_gui_old.py
ros_ws/src/libo_gui/test/: test_copyright.py  test_flake8.py  test_pep257.py
ros_ws/src/libo_gui/ui/: __init__.py  main_window.ui  robot_face_gui.ui
ros_ws/src/libo_interfaces/: CMakeLists(old).txt  CMakeLists.txt  package.xml
ros_ws/src/libo_interfaces/msg/: BookInfo.msg  DetectionFailTimer.msg  DetectionStatus.msg  Expression.msg  FaceExpression.msg  GestureResult.msg  Heartbeat.msg  HumanInfo.msg  OverallStatus.msg  RobotStatus.msg  TalkCommand.msg  TaskStatus.msg  VoiceCommand.msg
ros_ws/src/libo_interfaces/srv/: ActivateQRScanner.srv  AddGoalLocation.srv  CancelNavigation.srv  DeactivateDetector.srv  DeactivateTalker.srv  DeactivateTracker.srv  EndTask.srv  EscortRequest.srv  KioskQRCheck.srv  NavigationResult.srv  RobotQRCheck.srv  SetGoal.srv  TaskRequest.srv
ros_ws/src/libo_navigator/: LICENSE  custom_planner_overview.md  naigator_ver.txt  package.xml  setup.cfg  setup.py
ros_ws/src/libo_navigator/config/: waypoints.yaml
ros_ws/src/libo_navigator/libo_navigator/: navigator_node _3.py  navigator_node(before_obstacle).py  navigator_node.py  navigator_node_1.py  navigator_node_2.py  navigator_node_4.py  navigator_node_6(blacklist fix need).py  pinky_commnad_list.txt  service_commnad.txt
ros_ws/src/libo_state_handler/: package.xml  setup.cfg  setup.py
ros_ws/src/libo_state_handler/libo_state_handler/: state_handler_node.py
ros_ws/src/libo_waypoint_runner/: package.xml  setup.cfg  setup.py
ros_ws/src/libo_waypoint_runner/libo_waypoint_runner/: waypoint_follower_node.py
ros_ws/src/main_server/: package.xml  requirements.txt  setup.py  test_service.py
ros_ws/src/main_server/launch/: weight_sensor.launch.py
ros_ws/src/stock/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
ros_ws/src/vicpinky_bringup/: package.xml
ros_ws/src/vicpinky_gazebo/: package.xml
src/: gemini_prompt.md
src/admin/: setup.cfg  setup.py
src/admin/admin/: debug_tool.py  debug_tool.ui  debug_tool_qt.py
src/kiosk/: main_window.py  setup.py
src/libo_interfaces/: CMakeLists.txt
src/libo_interfaces/msg/: Waypoint.msg
src/libo_interfaces/srv/: BookSearch.srv
src/main_server/: setup.cfg  setup.py
src/main_server/test/: test_waypoint_moving.ipynb
vicpinky navi backup/vicpinky_navigation/: package.xml
vicpinky navi backup/vicpinky_navigation/launch/: bringup_launch.xml  localization_launch.xml
vicpinky navi backup/vicpinky_navigation/map/: addinedu1.pgm  addinedu1.yaml  map3_final.yaml
vicpinky navi backup/vicpinky_navigation/params/: nav2_params.yaml
(+164 files in other folders)
