<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>admin</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kimdaren2@gmail.com">dan</maintainer>
  <license>TODO: License declaration</license>

  <!-- admin 패키지가 libo_interfaces에 정의된 서비스를 사용하므로 의존성을 추가합니다. -->
  <depend>libo_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <colcon-ros>
      <install_marker>ament_python</install_marker>
    </colcon-ros>
  </export>
</package>
