<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>libo_gui</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="leesh20806@gmail.com">robolee</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>libo_interfaces</depend>  <!-- 우리가 만든 인터페이스 패키지 -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
